[gd_scene load_steps=6 format=3 uid="uid://crx1txy486rtu"]

[ext_resource type="Script" path="res://addons/bpb_editor_walker/player/editor_player.gd" id="1_1fajk"]
[ext_resource type="Script" path="res://addons/bpb_editor_walker/player/model_root.gd" id="2_7oyad"]
[ext_resource type="PackedScene" uid="uid://dxflr0r4i70fn" path="res://addons/bpb_editor_walker/model/eiden.glb" id="2_t6hns"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hwyyx"]
radius = 0.4
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_o01mi"]
radius = 0.4

[node name="editor_player" type="CharacterBody3D" groups=["editor_player"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_1fajk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hwyyx")

[node name="model_root" type="Node3D" parent="."]
script = ExtResource("2_7oyad")

[node name="eiden" parent="model_root" instance=ExtResource("2_t6hns")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)

[node name="camera_root" type="Node3D" parent="."]

[node name="axis_y" type="Node3D" parent="camera_root"]

[node name="axis_x" type="Node3D" parent="camera_root/axis_y"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="camera_pos" type="Node3D" parent="camera_root/axis_y/axis_x"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="gravity_area_detector" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="gravity_area_detector"]
shape = SubResource("SphereShape3D_o01mi")

[connection signal="area_entered" from="gravity_area_detector" to="." method="_on_gravity_area_detector_area_entered"]
[connection signal="area_exited" from="gravity_area_detector" to="." method="_on_gravity_area_detector_area_exited"]
